NMC_ minor interface enhancements- preventing overflow of groups/show.html right column

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -62,7 +62,7 @@ input[type='submit'] {
 
 }
 input[type='file'] {
-        background-color: #0c93cb;
+    background-color: #0c93cb;
     font-size : 1.4em;
     font-weight: bold;
     color:#fed271;
@@ -275,6 +275,9 @@ border-radius:5px;
 }
 #menu li a:hover { color: white; 
 background-color: #0c93cb; }
+div.span7 {
+    align:center;
+}
 
 div.span9 {
  resize:auto;
@@ -290,6 +293,7 @@ div.span12 {
   background-size: 100% 100%;
   height:100%
   width:96%;
+  min-width:500px;
     margin:2%;
     padding:4%;
     border: 2px solid #0c93cb;
@@ -300,8 +304,9 @@ div.span12 {
     float:left;
 }
 
-div.row-fluid {
+div.wide {
     width:100%;
+    min-width:600px;
 }
 
 .bubble {
